Ajustes de variables en .env

--- a/Entrega Final/.env
+++ b/Entrega Final/.env
@@ -7,6 +7,7 @@ ENV_LOGGER=DEVELOPMENT
 ACCESS_TOKEN_MERCADOPAGO=TEST-2835544536336348-051816-a0688df3698c5d5a8647b13fdd7083eb-21718615
 MAIL_USER=nicozurdo13@gmail.com
 MAIL_PASS=hjkzirvkkqonsdph
+PORT=8080
 
 # PERSISTENCE OPTIONS: "MONGO"  o  "FILE"
 # ENV_LOGGER: "DEVELOPMENT"  o   "PRODUCTION"
